--- a/index_list/booking_reservation_page.html
+++ b/index_list/booking_reservation_page.html
@@ -90,24 +90,19 @@
                                 <label for="reservation_info_demands">需　　求：</label>
                                 <div class="chk_css">
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
-                                        <label for="barrier_free">無障礙設施</label>
                                         <input class="chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
                                         <label for="child_seats">嬰兒座椅</label>
-                                        <input class="chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
-                                        <label for="min_consumption">最低消費</label>
-                                    </div>
-                                    <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
-                                        <label for="delivery">外送</label>
-                                        <input class="chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
-                                        <label for="service_free">服務費</label>
                                         <input class="chk_chk" type="checkbox" name="parking" id="parking" value="2">
                                         <label for="parking">停車</label>
                                         <input class="chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
                                         <label for="allow_pets">攜帶寵物</label>
                                     </div>
-
+                                    <!-- <div class="chk_item">
+                                        <input class="chk_chk" type="checkbox" name="parking" id="parking" value="2">
+                                        <label for="parking">停車</label>
+                                        <input class="chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
+                                        <label for="allow_pets">攜帶寵物</label>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="form-group row">
