--- a/index_list/orderfinished.html
+++ b/index_list/orderfinished.html
@@ -35,6 +35,7 @@
     <div class="buy_back_div">
       <button class="buy_back_btn" id="check_order" onclick="check_order()">查看訂單</button>
       <button class="buy_back_btn" id="back_to_home" onclick="back_index()">回首頁</button>
+      <button class="buy_back_btn" id="back_to_home" onclick="back_restaurant()">我要訂餐</button>
     </div>
   </div>
 
@@ -51,6 +52,9 @@
     }
     function back_index() {
       window.location = "index.html";
+    }
+    function back_restaurant() {
+      window.location = "restaurant_page_login_ok.html";
     }
   </script>
 </body>
