--- a/index_list/group_orderfinished.html
+++ b/index_list/group_orderfinished.html
@@ -47,6 +47,7 @@
     <div class="buy_back_div">
       <button class="buy_back_btn" id="check_order" onclick="check_order()">查看所有團員已點清單</button>
       <button class="buy_back_btn" id="back_to_home" onclick="back_index()">回首頁</button>
+      <button class="buy_back_btn" id="back_to_home" onclick="back_restaurant()">我要訂餐</button>
     </div>
   </div>
 
