--- a/index_list/group_orderfinished.html
+++ b/index_list/group_orderfinished.html
@@ -46,8 +46,7 @@
     </div>
     <div class="buy_back_div">
       <button class="buy_back_btn" id="check_order" onclick="check_order()">查看所有團員已點清單</button>
-      <button class="buy_back_btn" id="back_to_home" onclick="back_index()">回首頁</button>
-      <button class="buy_back_btn" id="back_to_home" onclick="back_restaurant()">我要訂餐</button>
+      <button class="buy_back_btn" id="back_to_home" onclick="back_restaurant()">回到餐廳</button>
     </div>
   </div>
 
@@ -66,8 +65,8 @@
     function check_order() {
       window.location = "orderdisaplay.html";
     }
-    function back_index() {
-      window.location = "index.html";
+    function back_restaurant() {
+      window.location = "restaurant_page_login_ok.html";
     }
   </script>
 </body>
