--- a/index_list/restaurant_booking_history.html
+++ b/index_list/restaurant_booking_history.html
@@ -37,19 +37,19 @@
 
   <!-- 導覽列 over -->
 
-  <aside>
+  <aside id="restaurant_booking_history_aside">
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">訂位管理</a>
           </h4>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
+        <div id="collapseOne" class="panel-collapse collapse">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_today_booking.html">今日訂位</a>
           </div>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
+        <div id="collapseOne" class="panel-collapse collapse default">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_booking_history.html">歷史訂位紀錄</a>
           </div>
@@ -60,12 +60,12 @@
           <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂餐管理</a>
           </h4>
         </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
+        <div id="collapseTwo" class="panel-collapse collapse">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
           </div>
         </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
+        <div id="collapseTwo" class="panel-collapse collapse">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_history_list.html">歷史訂餐紀錄</a>
           </div>
@@ -74,176 +74,152 @@
     </div>
   </aside>
 
-  <div class="container">
-    <div class="search-bar">
-      <button>搜尋</button><input type="text" placeholder="訂單編號">
+  <section id="restaurant_booking_history">
+    <div class="container">
+      <div class="search_bar">
+        <div>
+          <h3>歷史訂位紀錄</h3>
+        </div>
+        <div class="search_bar_div">
+          <i class="fas fa-search"></i>
+          <input type="text" placeholder="訂單編號">
+        </div>
+        <button onclick="search()">搜尋</button>
+      </div>
+      <table class="table order_table">
+        <thead>
+          <tr>
+            <th>狀態</th>
+            <th>訂位編號</th>
+            <th>訂位日期</th>
+            <th>訂位時間</th>
+            <th>訂位人數</th>
+            <th>訂位人</th>
+            <th>手機</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr id="test">
+            <td>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" checked disabled=“disabled”>
+                </label>
+              </div>
+            </td>
+            <td>00123</td>
+            <td>2022-02-22</td>
+            <td>19:30</td>
+            <td>5</td>
+            <td>江程哲</td>
+            <td>0988512203</td>
+            <td>
+              <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
+                詳細內容
+              </button>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" checked disabled=“disabled”>
+                </label>
+              </div>
+            </td>
+            <td>00122</td>
+            <td>2022-02-22</td>
+            <td>17:00</td>
+            <td>1</td>
+            <td>張瑜庭</td>
+            <td>0902135699</td>
+            <td>
+              <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
+                詳細內容
+              </button>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" checked disabled=“disabled”>
+                </label>
+              </div>
+            </td>
+            <td>00121</td>
+            <td>2022-02-21</td>
+            <td>18:30</td>
+            <td>3</td>
+            <td>李曉明</td>
+            <td>0918557110</td>
+            <td>
+              <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
+                詳細內容
+              </button>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" checked disabled="disabled">
+                </label>
+              </div>
+            </td>
+            <td>00120</td>
+            <td>2022-02-21</td>
+            <td>17:15</td>
+            <td>3</td>
+            <td>陳誠慶</td>
+            <td>0972110202</td>
+            <td>
+              <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
+                詳細內容
+              </button>
+            </td>
+          </tr>
+
+          <!-- 訂餐明細對話盒 -->
+          <div class="modal fade" id="detailModal">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                  <h3 class="modal-title">訂單明細</h3>
+                  <button type="button" class="close" data-dismiss="modal"></button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="detail_modal_body">
+                  姓名：江程哲 <br />
+                  手機：0988512203<br />
+                  電子郵件：mark8841@gmail.com <br />
+                  訂位編號：00123 <br />
+                  訂位人數：5人 <br />
+                  訂位日期：2022/02/22 <br />
+                  取位時間：19:30 <br />
+                  備註：需要兒童座椅
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                  <button type="button" class="detail_btn" data-dismiss="modal">
+                    返回
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </tbody>
+      </table>
     </div>
-    <table class="table order_table">
-      <thead>
-        <tr>
-          <th>狀態</th>
-          <th>訂位編號</th>
-          <th>訂位日期</th>
-          <th>訂位時間</th>
-          <th>訂位人數</th>
-          <th>訂位人</th>
-          <th>手機</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr id="test">
-          <td>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked disabled=“disabled”>
-              </label>
-            </div>
-          </td>
-          <td>00123</td>
-          <td>2022-02-22</td>
-          <td>19:30</td>
-          <td>5</td>
-          <td>江程哲</td>
-          <td>0988512203</td>
-          <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
-              詳細內容
-            </button>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked disabled=“disabled”>
-              </label>
-            </div>
-          </td>
-          <td>00122</td>
-          <td>2022-02-22</td>
-          <td>17:00</td>
-          <td>1</td>
-          <td>張瑜庭</td>
-          <td>0902135699</td>
-          <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
-              詳細內容
-            </button>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked disabled=“disabled”>
-              </label>
-            </div>
-          </td>
-          <td>00121</td>
-          <td>2022-02-21</td>
-          <td>18:30</td>
-          <td>3</td>
-          <td>李曉明</td>
-          <td>0918557110</td>
-          <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
-              詳細內容
-            </button>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked disabled=“disabled”>
-              </label>
-            </div>
-          </td>
-          <td>00120</td>
-          <td>2022-02-21</td>
-          <td>17:15</td>
-          <td>3</td>
-          <td>陳誠慶</td>
-          <td>0972110202</td>
-          <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
-              詳細內容
-            </button>
-          </td>
-        </tr>
-
-        <!-- 訂餐明細對話盒 -->
-        <div class="modal fade" id="detailModal">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <!-- Modal Header -->
-              <div class="modal-header">
-                <h3 class="modal-title">訂單明細</h3>
-                <button type="button" class="close" data-dismiss="modal"></button>
-              </div>
-
-              <!-- Modal body -->
-              <div class="detail_modal_body">
-                姓名：江程哲 <br />
-                手機：0988512203<br />
-                電子郵件：mark8841@gmail.com <br />
-                訂位編號：00123 <br />
-                訂位人數：5人 <br />
-                訂位日期：2022/02/22 <br />
-                取位時間：19:30 <br />
-                備註：需要兒童座椅
-              </div>
-
-              <!-- Modal footer -->
-              <div class="modal-footer">
-                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
-                  返回
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="detailModal2">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <!-- Modal Header -->
-              <div class="modal-header">
-                <h3 class="modal-title">確定取消訂單嗎?</h3>
-                <button type="button" class="close" data-dismiss="modal"></button>
-              </div>
-
-              <!-- Modal body -->
-              <div class="detail_modal_body">
-                姓名：張哲偉 <br />
-                手機：0972607451<br />
-                電子郵件：jason8745@gmail.com <br />
-                訂位編號：00127 <br />
-                訂位人數：2人 <br />
-                訂位日期：2022/02/24 <br />
-                取位時間：20:00 <br />
-                備註：需要兒童座椅
-              </div>
-
-              <!-- Modal footer -->
-              <div class="modal-footer">
-                <button type="button" class="btn btn-lg btn-danger" data-dismiss="modal" onclick="myFunction()">
-                  確認取消 
-                </button>
-                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
-                  返回
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </tbody>
-    </table>
-  </div>
+  </section>
 
 
   <!-- 頁尾 start -->
