--- a/index_list/restaurant_self_pick_up.html
+++ b/index_list/restaurant_self_pick_up.html
@@ -37,19 +37,19 @@
 
   <!-- 導覽列 over -->
 
-  <aside>
+  <aside id="restaurant_self_pick_up_aside">
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">訂位管理</a>
           </h4>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
+        <div id="collapseOne" class="panel-collapse collapse">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_today_booking.html">今日訂位</a>
           </div>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
+        <div id="collapseOne" class="panel-collapse collapse">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_booking_history.html">歷史訂位紀錄</a>
           </div>
@@ -60,12 +60,12 @@
           <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂餐管理</a>
           </h4>
         </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
+        <div id="collapseTwo" class="panel-collapse collapse default">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
           </div>
         </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
+        <div id="collapseTwo" class="panel-collapse collapse">
           <div class="little_title">
             <a data-parent="#accordion" href="restaurant_history_list.html">歷史訂餐紀錄</a>
           </div>
@@ -74,10 +74,18 @@
     </div>
   </aside>
 
-  <div class="container">
-    <div class="search-bar">
-      <button>搜尋</button><input type="text" placeholder="訂單編號">
+  <section id="restaurant_self_pick_up">
+<div class="container">
+  <div class="search_bar">
+    <div>
+      <h3>今日自取訂餐</h3>
     </div>
+    <div class="search_bar_div">
+      <i class="fas fa-search"></i>
+      <input type="text" placeholder="訂單編號">
+    </div>
+    <button onclick="search()">搜尋</button>
+  </div>
     <table class="table order_table">
       <thead>
         <tr>
@@ -87,6 +95,8 @@
           <th>取餐時間</th>
           <th>取餐姓名</th>
           <th>手機</th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -94,7 +104,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
+                <input type="checkbox">
               </label>
             </div>
           </td>
@@ -104,19 +114,12 @@
           <td>李曉明</td>
           <td>0972607451</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-danger group_btn" data-toggle="modal" data-target="#detailModal3"
-              style="position: relative; right: 55px;">
-              揪
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C; position: relative; right: 100px;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -126,7 +129,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
+                <input type="checkbox">
               </label>
             </div>
           </td>
@@ -136,19 +139,12 @@
           <td>郭美美</td>
           <td>0928755511</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-danger group_btn" data-toggle="modal" data-target="#detailModal3"
-              style="position: relative; right: 55px;">
-              揪
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C; position: relative; right: 100px;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -158,7 +154,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
+                <input type="checkbox">
               </label>
             </div>
           </td>
@@ -168,19 +164,12 @@
           <td>陳家欣</td>
           <td>0936621354</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-danger group_btn" data-toggle="modal" data-target="#detailModal3"
-              style="position: relative; right: 55px;">
-              揪
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C; position: relative; right: 100px;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -190,7 +179,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
+                <input type="checkbox">
               </label>
             </div>
           </td>
@@ -200,13 +189,12 @@
           <td>張慧庭</td>
           <td>0902135699</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -216,7 +204,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
+                <input type="checkbox" checked>
               </label>
             </div>
           </td>
@@ -226,13 +214,12 @@
           <td>李玉芳</td>
           <td>0918557110</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -242,7 +229,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
+                <input type="checkbox" checked>
               </label>
             </div>
           </td>
@@ -252,13 +239,12 @@
           <td>陳誠慶</td>
           <td>0972110202</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -268,7 +254,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
+                <input type="checkbox" checked>
               </label>
             </div>
           </td>
@@ -278,13 +264,12 @@
           <td>劉宇慶</td>
           <td>0968115202</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+            <button class="detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
-              style="border: 1px solid #403C3C;">
+            <button class="cancel_btn" data-toggle="modal" data-target="#detailModal2">
               取消
             </button>
           </td>
@@ -316,7 +301,7 @@
 
               <!-- Modal footer -->
               <div class="modal-footer">
-                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
+                <button type="button" class="detail_btn" data-dismiss="modal">
                   返回
                 </button>
               </div>
@@ -348,11 +333,11 @@
 
               <!-- Modal footer -->
               <div class="modal-footer">
-                <button type="button" class="btn btn-lg btn-danger" data-dismiss="modal" onclick="myFunction()">
-                  確認取消
-                </button>
-                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
+                <button type="button" class="detail_btn" data-dismiss="modal">
                   返回
+                </button>
+                <button type="button" class="cancel_btn" data-dismiss="modal" onclick="myFunction()">
+                  取消訂餐
                 </button>
               </div>
             </div>
@@ -397,6 +382,8 @@
       </tbody>
     </table>
   </div>
+  </section>
+  
 
 
   <!-- 頁尾 start -->
