--- a/index_list/member_register.html
+++ b/index_list/member_register.html
@@ -72,7 +72,7 @@
                 <label for="password" class="form_text">密碼</label>
                 <div class="input_box">
                   <input
-                    type="text"
+                    type="password"
                     id="password"
                     class="form-control"
                     name="password"
@@ -85,7 +85,7 @@
                 <label for="password_confirm" class="form_text">確認密碼</label>
                 <div class="input_box">
                   <input
-                    type="text"
+                    type="password"
                     id="password_confirm"
                     class="form-control"
                     name="password_confirm"
